# ros-noetic-cloud-deployment

./: README.md
devel/lib/pkgconfig/: my_robot_pkg.pc
devel/share/my_robot/cmake/: my_robotConfig.cmake
devel/share/my_robot_pkg/cmake/: my_robot_pkgConfig.cmake
src/my_robot/: package.xml
src/my_robot/src/: talker.py
src/my_robot_pkg/: CMakeLists.txt  package.xml
src/my_robot_pkg/launch/: all_nodes.launch  talker.launch
src/my_robot_pkg/scripts/: listener.py  talker.py
