<?xml version="1.0"?>
<package format="2">
  <name>my_robot_pkg</name>
  <version>0.0.0</version>
  <description>The my_robot_pkg package</description>
  <maintainer email="you@example.com">Pranitha Gokamala</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
</package>
